--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,10 @@
 SECRET_KEY=
 
-NAME=
-USER=
-PASSWORD=
-HOST=
-PORT=
+POSTGRES_DB_NAME=
+POSTGRES_DB_USER=
+POSTGRES_DB_PASSWORD=
+POSTGRES_DB_HOST=
+POSTGRES_DB_PORT=
 
 EMAIL_HOST=
 EMAIL_PORT=
@@ -13,4 +13,4 @@ EMAIL_USE_TLS=
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 
-LOCATION=
+REDIS_URL=
